fix: Some random thoughts items spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,7 +126,7 @@ a.slide-logo {
   transform: scale(1.3, 1.3);
 }
 
-p {
+.post p {
   @apply mb-8;
   @apply text-xl;
 }
